src/test/deca/context/valid/oracle/type_binary_op_modulo.deca
{
    5 % 2;
    20 % 5;
    2 % 5;
}