src/test/deca/context/invalid/oracle/use_var_not_decl_with_plus_right.deca
{
    int x;
    x = 2 + y;
}